--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link rel="stylesheet" href="/css/master.css">
+    <link rel="stylesheet" href="css/master.css">
     <meta charset="utf-8">
     <title>[Restaurant Name]</title>
   </head>
   <body>
-    <div class="p1">
-      Welcome to the website
+    <div class="main_content">
+      <div class="p1">
+        Welcome to the website
+      </div>
     </div>
-  </body>
+    </body>
 </html>
