--- a/index.html
+++ b/index.html
@@ -2,55 +2,43 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>VOVOI</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <title>Taste MagiQ</title>
+    <link rel="stylesheet" href="./css/master.css">
   </head>
   <body>
+    <br>
     <div class="heading">
-          Welcome to the VOVOI website.
+          Welcome to Taste MagiQ
     </div>
     <br>
-    <div class="founders">
-      Meet the founders of the great company.
-      <div class="founder">
-        <h3>Thomas Dow</h3>
-        He is tall and looks like a mad man who has escaped prison. (Not saying he hasn't)
-      </div>
-      <div class="founder">
-        <h3>Oliver O'Hara</h3>
-        He wears ASOS and prolly wanks with a glove on. (We'll never know :P)
-      </div>
-      <div class="founder">
-        <h3>Taseen Alam</h3>
-        Short, fit and cute. That's what he's dating.
-      </div>
-      <div class="founder">
-        <h3>Mohit Aggarwal</h3>
-        Couldn't find a higher-ranked stoner than him.
-      </div>
-      <div class="founder">
-        <h3>James Blacklock</h3>
-          Has a dog and posts pictures of it when he's depressed cuz he's in foundation year.
-      </div>
-      <div class="founder">
-        <h3>Aakash Kalantre</h3>
-        He is fatter than the lady in Yo Mama jokes. Prolly the next Thanos.
-      </div>
-      <div class="founder">
-        <h3>Brandon Chan</h3>
-        Yes he has chunned and zoned out during this idea.
-      </div>
-      <br><br>
-      <h2>Hope you liked them.</h2>
+    <div class="main_content">
+          <a id="home" href="index.html">Home</a>
+          <a id="menu" href="menu.html">Menu</a>
+          <a id="about" href="about.html">About</a>
+          <a id="contact" href="contact.html">Contact</a>
+          <a id="location" href="location.html">Location</a>
     </div>
-    <br>
-    <div class="leadtovideo">
-      Click the link to see a video of Thomas Dow's wee-wee while changing.
-      <br>
-      <div class="video">
-        <a href="/clientApp/video.html">THOMAS WEE-WEE</a>
-      </div>
+    <br><br>
+    <div class="content">
+      This is a sample of what we will be showing to people.
     </div>
-    <script src="../javascript/app.js" charset="utf-8"></script>
   </body>
-</html>
+</html>.
+<!--
+Tasks
+ - js
+ - domain name
+ - server to host
+ - fix websites
+ - css
+ - mobile friendly
+
+ Link to check colors in India = https://www.veem.com/library/colors-wear-avoid-meeting-business-partners-india/
+
+ link to HTML # codes = https://htmlcolorcodes.com/
+
+Link to colors which work on websites  = https://visme.co/blog/website-color-schemes/
+->
+<!-
+Web hosts and domain checkers = domain.com, go-daddy,
+->
