--- a/final-restaurant/src/index.html
+++ b/final-restaurant/src/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>FinalRestaurant</title>
+  <title>Taste Magiq</title>
   <base href="/">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="./assets/images/Taste_Magic_burned.png">
 </head>
 <body>
